# Author: Alec Foster, Antonio Cervantes, Colter Ogden
# NetID: sirslush, antonioc1, jcogden
# Date: 11/4/2018
# Project 3

cmake_minimum_required(VERSION 3.1)

# Define the project name. 

project (hlysn)

# Add a subdirectory to the project. The CMakeLists.txt file in that subdirectory
# will be used for further setting up the project.

add_subdirectory( src )